[package]
name = "reddit-dl"
version = "0.1.0"
authors = ["Boris Tatarintsev <ttyv00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
clap = "2.33"
hyper = "0.13.6"
hyper-tls = "0.4.1"
http = "0.2"
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
indicatif = "0.14"
dirs = "2.0.2"
url = "2.1.1"
